web-client/src/styles/components/professor/review_form.module.scss
/* ... */
@keyframes zoom-in-zoom-out {
  0% {
    transform: scale(0.5);
  }
  100% {
    transform: scale(1);
  }
}

.warningWindow {
  background-color: white;
  border-radius: 8px;
  padding: 1rem;
  display: flex;
  flex-direction: column;
  justify-content: center;

  animation-name: zoom-in-zoom-out;
  animation-duration: 100ms;
  animation-iteration-count: 1;
  animation-timing-function: ease-in-out;
  animation-fill-mode: forwards;

  .list {
    margin: 1rem 0;

    .element {
      margin-bottom: 0.5rem;
    }
  }


  li {
    margin-left: 1rem;
  }

}

.warningButton {
  margin-top: 1rem;
  border: none;
  padding: 0.7rem 1rem;
  border-radius: 9999px;
  color: white;
  font-weight: 700;
  background-color: #87CEFA;
  transition: opacity 0.2s ease-in-out;
  width: fit-content;

  &:hover {
    text-decoration: none;
    opacity: 0.8;
  }

}


.postEditor {
  overflow-x: hidden;
  overflow-y: auto;
  position: relative;
  -webkit-user-select: none;
  cursor: text;
  max-height: 350px;
  min-height: 24px;
  font-size: 20px;
  line-height: 24px;
  font-weight: 400;
  width: 100%;
}

.disabledPostEditor {
  @extend .postEditor;
  pointer-events: none;
}

.postContentContainer {
  padding-bottom: 2px;
  padding-top: 2px;
  position: relative;
  z-index: 1;
}

.postContent {
  -moz-user-modify: read-write-plaintext-only;
  -webkit-user-modify: read-write-plaintext-only;
  height: inherit;
  max-height: inherit;
  min-height: inherit;
  text-align: initial;
}

.postContent[contenteditable=true] {
  -moz-user-modify: read-write-plaintext-only;
  -webkit-user-modify: read-write-plaintext-only;
}

.postRTL {
  direction: rtl;
  text-align: right;
}

.postLTR {
  direction: ltr;
  text-align: left;
}

.postLink {
  color: rgb(29, 155, 240);

}

.postParagraph {
  padding-bottom: 2px;
  padding-top: 2px;
  overflow: hidden;
  position: relative;
  white-space: pre-wrap;

}

.postPlaceholder {
  color: #536471;
  position: absolute;
  user-select: none;
  -webkit-user-select: none;
  z-index: 1;
  padding-bottom: 2px;
  padding-top: 2px;
}

.imagePreview {
  position: relative;
  cursor: pointer;

  width: 100%;
  height: 100%;
  max-width: 150px;

  border-radius: 16px;
  border: 1px solid #E5E5E5;

  overflow: hidden;
  z-index: 1;


  .imageDiv {
    background-repeat: no-repeat;
    background-position: center center;
    background-size: cover;
    width: 100%;
    max-width: 100%;
    height: 100%;
    z-index: -1;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
  }

  img {
    inset: 0px;
    height: 100%;
    opacity: 0;
    position: absolute;
    width: 100%;
    z-index: -1;
    -webkit-user-drag: none;
    overflow-clip-margin: content-box;
    overflow: clip;
  }
}

.videoPreview {
  position: relative;
  cursor: pointer;

  height: 100%;
  max-height: 680px;
  max-width: 100%;

  border-radius: 16px;
  overflow: hidden;
  z-index: 1;

  .videoDiv {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    height: 100%;
    width: 100%;


    video {
      height: 100%;
      width: 100%;
    }

  }

}

.noDisplay {
  display: none !important;

}

.deleteButton {
  position: absolute;
  top: 0;
  right: 0;
  z-index: 1;
  margin: 8px;
  cursor: pointer;
  border: none;
  transition-duration: 0.2s;
  transition-property: background-color, box-shadow;
  border-radius: 9999px;
  background-color: rgba(0, 0, 0, 0.3);
  color: white;
  padding: 4px;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 24px;
  width: 24px;

  &:hover {
    background-color: rgba(0, 0, 0, 0.5);
  }
}


.emojiSelector {
  position: relative;
  transition: opacity 0.2s ease-in-out;
  opacity: 0;
  z-index: 999;
  pointer-events: none;

  & > aside {
    position: absolute;
    top: 50px;
  }

}

.gifSelector {
  position: relative;
  transition: opacity 0.2s ease-in-out;
  opacity: 0;
  z-index: 999;
  pointer-events: none;
  visibility: hidden;

  aside {
    position: absolute !important;
    top: 50px;
  }
}

.selectorOpen {
  opacity: 1;
  pointer-events: auto;
  visibility: visible;
}

.postFooter {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.postButtonList {
  display: flex;
  margin-top: 10px;
  margin-bottom: 20px;
}

.buttonIconWrapper {
  width: 36px;
  min-width: 36px;
  height: 36px;
  min-height: 36px;
  cursor: pointer;
  transition-duration: 0.3s;
  transition-property: all;
  border-radius: 9999px;
  margin-left: -8px;
  margin-right: 8px;

  &:hover {
    color: #049AE5;
  }

  @media (min-width: 768px) {
    &:hover {
      background-color: rgba(4, 154, 229, 0.1);
    }
  }
}

.disabledButton {
  @extend .buttonIconWrapper;
  pointer-events: none;
  opacity: 0.5;
}

.buttonLabel {
  transition-property: background-color;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 36px;
  height: 36px;
  border: none;
  background: transparent;
  color: inherit;
  font: inherit;
  padding: 0;
  appearance: none;
}

.labelBackground {
  position: absolute;
  margin: -8px;
  outline-style: none;
  top: 0px;
  right: 0px;
  left: 0px;
  bottom: 0px;
  border-radius: 9999px;
  transition-duration: 0.2s;
}

.imageUploadHTML {
  width: 0.1px;
  height: 0.1px;
  opacity: 0;
  overflow: hidden;
  position: absolute;
  z-index: -1;
}


.formOptions {
  display: flex;
  flex-direction: column;
  margin-top: 12px;
}

.disabledFormOptions {
  @extend .formOptions;
  pointer-events: none;
  opacity: 0.5;
}

.formOptionLabel {
  color: rgb(110, 112, 114);
  margin-bottom: 8px;
}

@mixin commentLength($color) {
  color: $color;
  font-weight: 500;
  font-size: 0.8rem;
  transition: color 0.2s ease-in-out, transform 0.4s ease-in-out;
  transform-origin: right;
  display: flex;
  justify-content: flex-end;
  margin-top: 10px;
  user-select: none;
  -webkit-user-select: none;
}

.commentLengthGood {
  @include commentLength(#808080);
  transform: scale(1.1);
}
/* ... */

